# chatgpt-telegram

./: .gitignore  README.md  bot-config.yaml  release.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
src/: __main__.py  chatgpt.py  chatgpt_browser.py  telegrambot.py
