[metadata]
long_description = file:README.md
long_description_content_type = text/markdown

[options]
install_requires =
  pyyaml
  openai>=0.27.0
  python-telegram-bot

[options.extras_require]
browser =
  playwright
  cf_clearance

[options.entry_points]
console_scripts =
    chatgpt_telegram_bot = chatgpt_telegram.telegrambot:run
